CSS Footer rendering bug fix Fixed a very frustrating bug that was causing the background image pattern to stop at the height of the viewport, while an overflow (showing only color gradient) remained behind.
This behavior has been fixed by the addition of the following lines to the main layout.scss file:

html {
  min-height: 100%;
  position: relative;
}

Now the background is consistent on all pages, with no awkward overflow on the footer.

--- a/assets/styles/_scss/includes/_footer.scss
+++ b/assets/styles/_scss/includes/_footer.scss
@@ -5,12 +5,12 @@
 
 .site-footer {
   font-family: 'Lato';
+  margin-bottom: 1rem;
   padding-bottom: 1.5rem;
   padding-top: 1rem;
   width: 100%;
 }
 
-.home .footer-wrapper, 
 .home .site-footer {
   background-color: transparent;
   color: transparentize(#fff, .25);
